# freebsdrusty

./: Cargo.toml  README.md  build.rs  wrapper.h
src/: main.rs
std/: .gitignore  Cargo.toml  build.rs  wrapper.d  wrapper.h
std/src/: allocator.rs  io.rs  lang.rs  lib.rs  macros.rs  main.c
std/src/os/: align_file.rs  align_utils.rs  bindings.rs  kernel-include.rs  kernel_malloc.rs  kernel_mallochelp.rs  mod.rs
