[package]
name = "project1"
version = "0.1.0"
authors = ["john"]
edition = "2018"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen="0.53.1"

[dependencies.bsd_std]
path = "std"

[dependencies]
libc = "0.2.0"

